--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,18 +2,28 @@
 <html lang="es">
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}CommunWheels{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
+            <link href="{{ asset('css/reset.css')}}" type="text/css" rel="stylesheet">
+            <link href="{{ asset('css/index.css')}}" type="text/css" rel="stylesheet">
+            <link href="{{ asset('css/navbar.css')}}" type="text/css" rel="stylesheet">
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/dist/tabler-icons.min.css" />
         {% endblock %}
 
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
+            <script type="text/javascript" src="{{ asset('js/sidebar.js') }}"></script>
         {% endblock %}
     </head>
     <body>
+        <header>
+            {% block header %}
+                {% include 'navbar.html.twig' %}
+            {% endblock %}
+        </header>
         {% block body %}{% endblock %}
     </body>
 </html>
