--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -27,6 +27,7 @@ nav a{
 }
 nav a:hover{
     background-color: var(--hover-color);
+    color: var(--back-color);
 }
 nav li:first-child{
     margin-right: auto;
