--- a/templates/Groups/main.html.twig
+++ b/templates/Groups/main.html.twig
@@ -2,9 +2,7 @@
 
 {% block body %}
     <div class="container">
-        <div class="primaryButton">
-            <a href="#"><i class="ti ti-table-plus"></i>Nuevo grupo</a>
-        </div>
+        <a href="#" class="primaryButton"><i class="ti ti-table-plus"></i>Nuevo grupo</a>
         <div class="table_container">
             <table class="tabla">
                 <thead>
