--- a/templates/Groups/modificar.html.twig
+++ b/templates/Groups/modificar.html.twig
@@ -3,12 +3,8 @@
 {% block body %}
     {{ dump(group) }}
     <div class="container">
-        <div class="secondaryButton">
-            <a href="{{ path('group_main') }}">Volver</a>
-        </div>
-        <div class="deleteButton">
-            <a href="#">Borrar grupo</a>
-        </div>
+        <a href="{{ path('group_main') }}" class="secondaryButton">Volver</a>
+        <a href="#" class="deleteButton">Borrar grupo</a>
     </div>
 {% endblock %}
 
