--- a/templates/Groups/main.html.twig
+++ b/templates/Groups/main.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
     <div class="container">
-        <a href="#" class="primaryButton"><i class="ti ti-table-plus"></i>Nuevo grupo</a>
+        <a href="{{ path('group_new') }}" class="primaryButton"><i class="ti ti-table-plus"></i>Nuevo grupo</a>
         <div class="table_container">
             <table class="tabla">
                 <thead>
