--- a/templates/Users/card.html.twig
+++ b/templates/Users/card.html.twig
@@ -1,6 +1,4 @@
-<div class="card">
-    <a href="#">
-        <i class="ti ti-users" style='font-size: 8rem;'></i>
-        <h3>Usuarios</h3>
-    </a>
-</div>
+<a href="{{ path('driver_main') }}" class="card">
+    <i class="ti ti-users" style='font-size: 8rem;'></i>
+    <h3>Usuarios</h3>
+</a>
