--- a/templates/Groups/card.html.twig
+++ b/templates/Groups/card.html.twig
@@ -1,6 +1,4 @@
-<div class="card">
-    <a href="{{ path('group_main') }}">
-        <i class="ti ti-users-group" style='font-size: 8rem;'></i>
-        <h3>Grupos</h3>
-    </a>
-</div>
+<a href="{{ path('group_main') }}" class="card">
+    <i class="ti ti-users-group" style='font-size: 8rem;'></i>
+    <h3>Grupos</h3>
+</a>
