--- a/templates/Notify/card.html.twig
+++ b/templates/Notify/card.html.twig
@@ -1,6 +1,4 @@
-<div class="card">
-    <a href="#">
-        <i class="ti ti-bell" style='font-size: 8rem;'></i>
-        <h3>Notificar</h3>
-    </a>
-</div>
+<a href="#" class="card">
+    <i class="ti ti-bell" style='font-size: 8rem;'></i>
+    <h3>Notificar</h3>
+</a>
