--- a/templates/Notify/card.html.twig
+++ b/templates/Notify/card.html.twig
@@ -1,4 +1,4 @@
-<a href="#" class="card">
+<a href="{{ path('notify_main') }}" class="card">
     <i class="ti ti-bell" style='font-size: 8rem;'></i>
     <h3>Notificar</h3>
 </a>
