--- a/templates/Notify/main.html.twig
+++ b/templates/Notify/main.html.twig
@@ -8,6 +8,7 @@
                 <thead>
                 <tr>
                     <th>Fecha</th>
+                    <th>Descripción</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -15,13 +16,14 @@
                     <tr>
                         <td>
                             <a href="{{ path('mod_absence', {'id':absence.id}) }}">
-                                {{ absence.absenceDate }}
+                                {{ absence.absenceDate | date('Y-m-d')}}
                             </a>
                         </td>
+                        <td>{{ absence.description }}</td>
                     </tr>
                 {% else %}
                     <tr>
-                        <td>No hay notificaciones</td>
+                        <td colspan="2">No hay notificaciones</td>
                     </tr>
                 {% endfor %}
                 </tbody>
