--- a/templates/Schedule/card.html.twig
+++ b/templates/Schedule/card.html.twig
@@ -1,4 +1,4 @@
-<a href="#" class="card">
+<a href="{{ path('schedule_main') }}" class="card">
     <i class="ti ti-clock-hour-1" style='font-size: 8rem;'></i>
     <h3>Horario</h3>
 </a>
