--- a/public/css/index.css
+++ b/public/css/index.css
@@ -265,3 +265,9 @@ CSS FOR LOGIN FORM
     height: 100%;
     width: 100%;
 }
+.titulo{
+    font-size: x-large;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 1rem;
+}
