--- a/templates/Main/index.html.twig
+++ b/templates/Main/index.html.twig
@@ -4,6 +4,7 @@
     <div class="container">
         {% if is_granted('ROLE_GROUP_ADMIN') %}
             {% include 'Users/card.html.twig' %}
+            {% include 'TimeTable/card.html.twig' %}
         {% endif %}
         {% include 'Groups/card.html.twig' %}
         {% include 'Notify/card.html.twig' %}
