--- a/templates/Security/login.html.twig
+++ b/templates/Security/login.html.twig
@@ -3,7 +3,7 @@
 {% block header %}{% endblock %}
 
 {% block body %}
-    <div class="container">
+    <div class="login_container">
         <div class="login_form_container">
             <form method="post">
                 <h2>CommunWheels</h2>
@@ -19,7 +19,7 @@
             </form>
         </div>
         <div class="logo">
-            <img src="{{ asset('images/logo.jpg') }}" alt="Logo">
+            <img src="{{ asset('images/LogoCommunWheelsWhite2.png') }}" alt="Logo">
         </div>
     </div>
 {% endblock %}
