--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -2,12 +2,14 @@
 <nav>
     <ul class="sidebar">
         <li><a href="#"><svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-x"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M18 6l-12 12" /><path d="M6 6l12 12" /></svg></a></li>
-        <li><a href="{{ path('main') }}">CommunWheels</a></li>
         <li><a href="{{ path('user_panel') }}">{{ app.user }} <i class="ti ti-user-filled"></i></a></li>
         <li><a href="{{ path('app_logout') }}">Log Out <i class="ti ti-logout"></i></a></li>
     </ul>
     <ul class="navBar">
-        <li><a href="{{ path('main') }}">CommunWheels</a></li>
+        <li>
+            {#  <img src="{{ asset('images/LogoCommunWheelsWhite2.png') }}" alt="Logo"> #}
+            <a href="{{ path('main') }}">CommunWheels</a>
+        </li>
         <li class="hideOnMobile"><a href="{{ path('user_panel') }}">{{ app.user }} <i class="ti ti-user-filled"></i></a></li>
         <li class="hideOnMobile"><a href="{{ path('app_logout') }}">Log Out <i class="ti ti-logout"></i></a></li>
         <li class="menuButton"><a href="#"><svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-menu-2"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4 6l16 0" /><path d="M4 12l16 0" /><path d="M4 18l16 0" /></svg></a></li>
