--- a/public/css/index.css
+++ b/public/css/index.css
@@ -23,6 +23,7 @@ body{
     padding: 4rem;
     justify-content: space-between;
     gap: 10px;
+    justify-content: center;
 }
 /**
 
@@ -285,4 +286,14 @@ CSS FOR LOGIN FORM
     padding: 4rem;
     justify-content: center;
     gap: 10px;
+}
+
+.schedule_form_container{
+    display: flex;
+    flex-direction: column;
+    background-color: var(--back-color);
+    padding: 2rem;
+    border-radius: 5px;
+    width: 25%;
+    gap: 20px;
 }
