Adding select2 to project

--- a/templates/Groups/modificar.html.twig
+++ b/templates/Groups/modificar.html.twig
@@ -22,4 +22,11 @@
             <a href="{{ path('group_main') }}" class="secondaryButton">Volver</a>
         </div>
     </div>
+
+    <script>
+        $(document).ready(function() {
+            $('.select2').select2();
+        });
+    </script>
+
 {% endblock %}
