--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,11 +11,13 @@
             <link href="{{ asset('css/index.css')}}" type="text/css" rel="stylesheet">
             <link href="{{ asset('css/navbar.css')}}" type="text/css" rel="stylesheet">
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/dist/tabler-icons.min.css" />
+            <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
         {% endblock %}
 
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
             <script type="text/javascript" src="{{ asset('js/sidebar.js') }}"></script>
+            <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
         {% endblock %}
     </head>
     <body>
