--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,6 +10,7 @@
             <link href="{{ asset('css/reset.css')}}" type="text/css" rel="stylesheet">
             <link href="{{ asset('css/index.css')}}" type="text/css" rel="stylesheet">
             <link href="{{ asset('css/navbar.css')}}" type="text/css" rel="stylesheet">
+            <link href="{{ asset('css/sweetAlert.css')}}" type="text/css" rel="stylesheet">
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/dist/tabler-icons.min.css" />
             <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
         {% endblock %}
