Adding knp paginator

--- a/templates/TimeTable/card.html.twig
+++ b/templates/TimeTable/card.html.twig
@@ -1,4 +1,4 @@
-<a href="#" class="card">
+<a href="{{ path('timetable_main') }}" class="card">
     <i class="ti ti-calendar" style='font-size: 8rem;'></i>
     <h3>Cuadrantes</h3>
 </a>
