--- a/public/css/index.css
+++ b/public/css/index.css
@@ -22,8 +22,8 @@ body{
     align-items: center;
     padding: 4rem;
     justify-content: space-between;
-    gap: 10px;
     justify-content: center;
+    gap: 0px 30px;
 }
 /**
 
@@ -32,7 +32,7 @@ CSS FOR CARD
  */
 .card{
     height: auto;
-    min-width: 45%;
+    min-width: 40%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -57,18 +57,22 @@ CSS FOR CARD
         flex-direction: column;
         flex-wrap: nowrap;
         justify-content: center;
+        gap: 10px;
     }
     .card{
         width: 100%;
+        padding-top: 1rem;
     }
 }
 @media(max-width: 700px){
     .container{
         flex-direction: column;
         flex-wrap: nowrap;
+        gap: 10px;
     }
     .card{
         width: 100%;
+        padding-top: 1rem;
     }
 }
 /**
@@ -81,6 +85,7 @@ CSS FOR TABLE AND TABLE CONTAINER
     display: flex;
     flex-direction: column;
     width: 100%;
+    padding-top: 1rem;
 }
 .table_container a{
     text-decoration: none;
