--- a/templates/Schedule/main.html.twig
+++ b/templates/Schedule/main.html.twig
@@ -4,9 +4,9 @@
     <div class="container">
         {% if schedules is empty %}
             <div class="schedule_form_container">
-                <p>Todavia no has registrado tu horario. Para poder pertenecer a un grupo es necesario el horario</p>
+                <p>Todavia no has registrado tu horario. Para poder viajar con un grupo es necesario el horario</p>
                 <div class="button_container">
-                <a href="#" class="primaryButton"><i class="ti ti-table-plus"></i>Añadir horario</a>
+                <a href="{{ path('schedule_create') }}" class="primaryButton"><i class="ti ti-table-plus"></i>Añadir horario</a>
                 </div>
             </div>
         {% else %}
