--- a/templates/TimeTable/main.html.twig
+++ b/templates/TimeTable/main.html.twig
@@ -1,1 +1,12 @@
 {% extends 'base.html.twig' %}
+
+{% block body %}
+    <div class="container">
+        <div class="button_container">
+            <a href="#" class="primaryButton"><i class="ti ti-table-plus"></i>Generar Cuadrante</a>
+        </div>
+        <div class="table_container">
+
+        </div>
+    </div>
+{% endblock %}
